spacing fixed for 3 at top

--- a/src/App.css
+++ b/src/App.css
@@ -5,8 +5,9 @@
     }
     .AdDesigner{
         margin-left: 20px;
-        display: inline-block;    
+        position: absolute;
         width: 50%;
+        left: 5px;
     }
     .Votes {
         position: absolute;
@@ -14,8 +15,9 @@
         width: 50%;
         right: 0;
     }
-    .Ad {
-       display: inline-block;
+    .container {
+       display: flex;
+       justify-content: space-around;
        
     }
 }
